[gd_scene load_steps=12 format=2]

[ext_resource path="res://Tilemaps/ts_pyramid.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Backgrounds/bg_desert.png" type="Texture" id=3]
[ext_resource path="res://Scripts/scr_background.gd" type="Script" id=4]
[ext_resource path="res://Scripts/scr_portal.gd" type="Script" id=5]
[ext_resource path="res://Scripts/scr_intro.gd" type="Script" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Interactions/PopUp.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 128 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.105882, 0.105882, 0.105882, 0.705882 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Intro" type="Node2D"]
script = ExtResource( 6 )

[node name="background" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )

[node name="bg_desert" type="TextureRect" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.013
margin_bottom = 0.200012
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 524272, 1, 0, 524273, 1, 0, 524274, 1, 0, 524275, 1, 0, 524276, 1, 0, 524277, 1, 0, 524278, 1, 0, 524279, 1, 0, 524280, 1, 0, 524281, 1, 0, 524282, 1, 0, 524283, 1, 0, 524284, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -416, 160 )

[node name="Portal" type="Area2D" parent="."]
position = Vector2( 1024, 192 )
script = ExtResource( 5 )
next_scene = "res://Scenes/Levels/World1.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
position = Vector2( -32, -96 )
shape = SubResource( 1 )

[node name="canvas_portal" type="CanvasLayer" parent="Portal"]

[node name="box_key_prompt" type="Panel" parent="Portal/canvas_portal"]
visible = false
anchor_left = 0.469
anchor_top = 0.907
anchor_right = 0.531
anchor_bottom = 0.96
margin_left = -32.256
margin_top = -0.200012
margin_right = 32.2559
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="Portal/canvas_portal/box_key_prompt"]
anchor_left = 0.125
anchor_right = 0.875
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 2
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_key" type="Label" parent="Portal/canvas_portal/box_key_prompt/hbox"]
margin_left = 7.0
margin_top = 9.0
margin_right = 15.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.545098, 1, 0.733333, 1 )
text = "Z"

[node name="label_action" type="Label" parent="Portal/canvas_portal/box_key_prompt/hbox"]
margin_left = 30.0
margin_top = 9.0
margin_right = 87.0
margin_bottom = 23.0
text = "Go to Level 1"

[node name="edge_left" type="StaticBody2D" parent="."]
position = Vector2( -544, 192 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_left"]
shape = SubResource( 3 )

[node name="edge_left2" type="StaticBody2D" parent="edge_left"]
position = Vector2( 0, -64 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_left/edge_left2"]
shape = SubResource( 3 )

[node name="edge_left3" type="StaticBody2D" parent="edge_left"]
position = Vector2( 0, -128 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_left/edge_left3"]
shape = SubResource( 3 )

[node name="edge_left4" type="StaticBody2D" parent="edge_left"]
position = Vector2( 0, -192 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_left/edge_left4"]
shape = SubResource( 3 )

[node name="edge_right" type="StaticBody2D" parent="."]
position = Vector2( 1056, 192 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_right"]
shape = SubResource( 3 )

[node name="edge_left2" type="StaticBody2D" parent="edge_right"]
position = Vector2( 0, -64 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_right/edge_left2"]
shape = SubResource( 3 )

[node name="edge_left3" type="StaticBody2D" parent="edge_right"]
position = Vector2( 0, -128 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_right/edge_left3"]
shape = SubResource( 3 )

[node name="edge_left4" type="StaticBody2D" parent="edge_right"]
position = Vector2( 0, -192 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_right/edge_left4"]
shape = SubResource( 3 )

[node name="edge_bottom" type="StaticBody2D" parent="."]
position = Vector2( 352, 256 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_bottom"]
shape = SubResource( 3 )

[node name="NPC1" type="Sprite" parent="."]
position = Vector2( 64, 192 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="PopUp" parent="NPC1" instance=ExtResource( 8 )]
Dialogue_File = "res://_Misc/Dialogue/intro_dialogue0.txt"
